Fix issue with header overlapping content on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,9 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    margin: 0 10px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 h1,
@@ -53,10 +55,9 @@ h3 {
 
 footer {
     height: auto;
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    flex: 0 0 50px;
     width: 100%;
+    margin-top: auto;
 }
 
 #footer-contact {
